--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ RoxygenNote: 7.2.3
 Imports: 
     BiocParallel,
     Cardinal,
+    data.table,
     dbscan,
     dplyr,
     DT,
@@ -21,6 +22,7 @@ Imports:
     ggsci,
     gplots,
     lomb,
+    magrittr,
     markdown,
     pals,
     pheatmap,
